--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,17 +1,20 @@
-<!DOCTYPE web-app PUBLIC
-        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-        "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-<web-app>
-    <display-name>Archetype Created Web Application</display-name>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://java.sun.com/xml/ns/javaee"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+         id="WebApp_ID" version="3.0">
+    <display-name>FoodReview</display-name>
     <servlet>
-        <servlet-name>UserController</servlet-name>
-        <display-name>UserController</display-name>
+        <servlet-name>userAuthorization</servlet-name>
+        <display-name>userAuthorization</display-name>
         <description></description>
         <servlet-class>swp391.controller.UserController</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>UserController</servlet-name>
-        <url-pattern>/UserController</url-pattern>
+        <servlet-name>userAuthorization</servlet-name>
+        <url-pattern>/userAuthorization</url-pattern>
     </servlet-mapping>
+    <welcome-file-list>
+        <welcome-file>userAuthorization</welcome-file>
+    </welcome-file-list>
 </web-app>
